--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "makefile.extensionOutputFolder": "./.vscode",
     "files.associations": {
         "algorithm": "c",
-        "random": "c"
+        "random": "c",
+        "so_long.h": "c"
     }
 }
